refactor: text-to-sql 相关接口
